<resources>
    <string name="app_name">Личный кабинет ТПУt</string>

    <!-- NavigationDrawer menu elements -->
    <string name="s_files">Мои файлы</string>
    <string name="mystudy">Моя успеваемость</string>
    <string name="logout">Выйти</string>

    <string name="title_activity_login">TPU Cloud</string>

    <string name="ivanov_ivan">Undefined</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Имя пользователя</string>
    <string name="prompt_password">Пароль</string>
    <string name="action_sign_in">Войти</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="server_base_url">https://filecloud.tpu.ru</string>



    <string name="drawer_open">Drawer is open</string>
    <string name="drawer_close">Drawer is closed</string>
</resources>
