<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single" android:menuCategory="container">
        <item
            android:id="@+id/m_files"
            android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/s_files"
            />

        <item
            android:id="@+id/m_study"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="@string/mystudy"/>

        <item
            android:id="@+id/m_logout"
            android:icon="@android:drawable/ic_menu_close_clear_cancel"
            android:title="@string/logout"/>

    </group>

</menu>